Thu Dec 26 00:45:33 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/make-snapshot: support new version scheme.

Wed Dec 25 22:44:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_arguments): set arg_keyword_check from
	  nd_cflag, which is set by parser.  internal ID is used for
	  unnamed keyword rest argument, which should be separated from no
	  keyword check.

	* iseq.c (rb_iseq_parameters): if no keyword check, keyword rest is
	  present.

	* parse.y (new_args_tail_gen): set keywords check to nd_cflag, which
	  equals to that keyword rest is not present.

Wed Dec 25 22:32:19 2013  Zachary Scott  <e@zzak.io>

	* lib/abbrev.rb: [DOC] rdoc format patch by Giorgos Tsiftsis [Bug #9146]

Wed Dec 25 20:30:10 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (rb_iseq_parameters): push argument type symbol only for
	  unnamed rest keywords argument.

Wed Dec 25 20:28:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_iseq_min_max_arity): maximum argument is unlimited if
	  having rest keywords argument.  [ruby-core:53298] [Bug #8072]

Wed Dec 25 18:29:22 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (argument_error): insert dummy frame to make
	  a backtrace object intead of modify backtrace string array.
	  [Bug #9295]

	* test/ruby/test_backtrace.rb: add a test for this patch.
	  fix test to compare a result of Exception#backtrace with
	  a result of Exception#backtrace_locations.

Wed Dec 25 13:00:54 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: let mingw do something black-magic, and check if
	  _gmtime64_s() is available actually.

	* win32/win32.c (gmtime_s, localtime_s): use _gmtime64_s() and
	  _localtime64_s() if available, not depending on very confusing
	  mingw variants macros.  based on the patch by phasis68 (Heesob
	  Park) at [ruby-core:58764].  [ruby-core:58391] [Bug #9119]

Wed Dec 25 12:33:41 2013  Yusuke Endoh  <mame@tsg.ne.jp>
